Fixed navbar height + truncate userbalace

--- a/market-dapp/client/public/assets/css/main.css
+++ b/market-dapp/client/public/assets/css/main.css
@@ -552,7 +552,7 @@ pre {
 .col-md-auto, .col-lg-1, .col-lg-2, .col-lg-3, .col-lg-4, .col-lg-5, .col-lg-6, .col-lg-7, .col-lg-8, .col-lg-9, .col-lg-10, .col-lg-11, .col-lg-12, .col-lg,
 .col-lg-auto, .col-xl-1, .col-xl-2, .col-xl-3, .col-xl-4, .col-xl-5, .col-xl-6, .col-xl-7, .col-xl-8, .col-xl-9, .col-xl-10, .col-xl-11, .col-xl-12, .col-xl,
 .col-xl-auto {
-  /*!-------------------------------------------------------------------------------------*/
+  
   position: relative;
   width: 100%;
   min-height: 22px;
@@ -15908,6 +15908,53 @@ a.social-youtube:hover {
 
 
  
+  
+
+  .navbar-brand .navbar-text{
+
+    display: flex;
+    position: relative;
+    flex-direction: column;
+  
+  }
+.userInfo{
+
+    display: flex;
+    position: relative;
+    flex-direction: column;
+    align-items: center;
+    align-content: center;
+  }
+
+/* [ Nav ] */
+.nav.text-uppercase > .nav-link,
+.nav.text-uppercase > .nav-item > .nav-link {
+  text-transform: uppercase;
+  font-size: 0.8125rem; }
+.nav.text-uppercase:not(.nav-light) > .nav-link,
+.nav.text-uppercase:not(.nav-light) > .nav-item > .nav-link {
+  font-weight: 600; }
+.nav.flex-column .nav-link {
+  padding-top: .125rem;
+  padding-bottom: .125rem; }
+  .nav.flex-column .nav-link:first-child {
+    padding-top: 0; }
+
+.navbar-affix {
+  -webkit-transition: all 350ms ease;
+  -moz-transition: all 350ms ease;
+  -ms-transition: all 350ms ease;
+  transition: all 350ms ease; }
+  .navbar-affix.affix {
+    background-color: #ffffff;
+    box-shadow: 0 0 8px rgba(0, 0, 0, 0.08); }
+
+.navbar {
+  padding-top: 0;
+  padding-bottom: 0;
+  min-height: 3.625rem; }
+  
+
   @media screen and (max-width: 576px) {
 
     .col-1, .col-2, .col-3, .col-4, .col-5, .col-6, .col-7, .col-8, .col-9, .col-10, .col-11, .col-12, .col,
@@ -15925,6 +15972,11 @@ a.social-youtube:hover {
     display: flex;
     flex-direction: column; }
 
+    .navbar {
+      padding-top: 19px;
+      padding-bottom: 41px;
+      min-height: 3.625rem; }
+    
     #navbar-txt{
       display: none;
     }
@@ -15985,7 +16037,10 @@ img {
   
       padding-left: 19%;
  }
- 
+ .navbar {
+  padding-top: 19px;
+  padding-bottom: 41px;
+  min-height: 3.625rem; }
     
     #navbar-txt{
       display: none;
@@ -16002,12 +16057,12 @@ img {
     .col-md-auto, .col-lg-1, .col-lg-2, .col-lg-3, .col-lg-4, .col-lg-5, .col-lg-6, .col-lg-7, .col-lg-8, .col-lg-9, .col-lg-10, .col-lg-11, .col-lg-12, .col-lg,
     .col-lg-auto, .col-xl-1, .col-xl-2, .col-xl-3, .col-xl-4, .col-xl-5, .col-xl-6, .col-xl-7, .col-xl-8, .col-xl-9, .col-xl-10, .col-xl-11, .col-xl-12, .col-xl,
     .col-xl-auto {
-
-     
-  
       padding-left: 13%;
  }
- 
+ .navbar {
+  padding-top: 24px;
+  padding-bottom: 41px;
+  min-height: 3.625rem; }
     #navbar-txt{
       display: none;
     }
@@ -16016,49 +16071,8 @@ img {
     }
   }
 
-  .navbar-brand .navbar-text{
 
-    display: flex;
-    position: relative;
-    flex-direction: column;
-  
-  }
-.userInfo{
 
-    display: flex;
-    position: relative;
-    flex-direction: column;
-    align-items: center;
-    align-content: center;
-  }
-
-/* [ Nav ] */
-.nav.text-uppercase > .nav-link,
-.nav.text-uppercase > .nav-item > .nav-link {
-  text-transform: uppercase;
-  font-size: 0.8125rem; }
-.nav.text-uppercase:not(.nav-light) > .nav-link,
-.nav.text-uppercase:not(.nav-light) > .nav-item > .nav-link {
-  font-weight: 600; }
-.nav.flex-column .nav-link {
-  padding-top: .125rem;
-  padding-bottom: .125rem; }
-  .nav.flex-column .nav-link:first-child {
-    padding-top: 0; }
-
-.navbar-affix {
-  -webkit-transition: all 350ms ease;
-  -moz-transition: all 350ms ease;
-  -ms-transition: all 350ms ease;
-  transition: all 350ms ease; }
-  .navbar-affix.affix {
-    background-color: #ffffff;
-    box-shadow: 0 0 8px rgba(0, 0, 0, 0.08); }
-
-.navbar {
-  padding-top: 28px;
-  padding-bottom: 39px;
-  min-height: 3.625rem; }
   .navbar .logo .logo-light,
   .navbar .logo .logo-dark {
     display: inline-block;
